--- a/package.json
+++ b/package.json
@@ -10,12 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.0.1",
+    "@react-icons/all-files": "^4.1.0",
     "daisyui": "^2.51.6",
+    "firebase": "^9.22.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-countup": "^6.4.2",
+    "react-daisyui": "^3.1.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^6.11.2",
+    "react-scroll-trigger": "^0.6.14",
+    "react-tabs": "^6.0.1",
+    "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
