--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-scroll-trigger": "^0.6.14",
     "react-tabs": "^6.0.1",
     "react-toastify": "^9.1.3",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
